Fixed Events page on mobile.

--- a/web/components/EventsPageComponents/EventsEarlierEvents/EventsEarlierEvents.module.css
+++ b/web/components/EventsPageComponents/EventsEarlierEvents/EventsEarlierEvents.module.css
@@ -1,10 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 1fr clamp(
-      140px,
-      12vw,
-      207px
-    );
+  grid-template-columns: clamp(140px, 12vw, 207px) 1fr 1fr clamp(140px, 12vw, 207px);
   grid-template-rows: 65px 1fr 24px;
   gap: 3px;
   padding: 0 3px 3px 3px;
@@ -147,6 +143,7 @@
 
 @media only screen and (max-width: 768px) {
   .container {
+    display: none;
     grid-template-columns: 16px 1fr 1fr 16px;
     grid-template-rows: 39px 1fr 24px;
     gap: 1px;
