--- a/web/components/EventsPageComponents/EventsUpcomingEvents/EventsUpcomingEvents.module.css
+++ b/web/components/EventsPageComponents/EventsUpcomingEvents/EventsUpcomingEvents.module.css
@@ -195,7 +195,7 @@
   .mobileBottomRight {
     display: block;
     background-color: #adb9ad;
-    grid-column: 2 / 3;
+    grid-column: 3 / 4;
     grid-row: 3 / 4;
   }
 
